<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Signup">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="167dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/greenbackground"
            />

    <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="20dp"
            android:text="@string/signup"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/scrollView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="100dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.22"
            android:layout_marginStart="8dp">

        <RelativeLayout
                android:id="@+id/relative"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <EditText
                    android:layout_marginBottom="20dp"
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_alignParentTop="true"

                    android:background="@drawable/textboxes"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textStyle="bold"
                    />

            <EditText
                    android:layout_marginBottom="20dp"
                    android:id="@+id/salary"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_below="@+id/spinner"

                    android:background="@drawable/textboxes"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textStyle="bold"
                    />

            <EditText
                    android:layout_marginBottom="20dp"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_below="@id/salary"
                    android:background="@drawable/textboxes"
                    android:ems="10"
                    android:hint="@string/pass_enter"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textStyle="bold" />

            <EditText
                    android:layout_marginBottom="20dp"
                    android:id="@+id/repassword"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_below="@id/password"

                    android:background="@drawable/textboxes"
                    android:ems="10"
                    android:hint="@string/repass_enter"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textStyle="bold" />

            <EditText
                    android:id="@+id/marks1"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"

                    android:layout_below="@id/repassword"
                    android:layout_marginBottom="20dp"

                    android:background="@drawable/textboxes"
                    android:ems="10"
                    android:hint="@string/marks_10"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textStyle="bold" />

            <EditText
                    android:id="@+id/marks2"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_below="@id/marks1"
                    android:layout_marginBottom="20dp"

                    android:background="@drawable/textboxes"
                    android:ems="10"
                    android:hint="@string/marks_12"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textStyle="bold" />
            <EditText
                    android:id="@+id/marks3"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_below="@id/marks2"
                    android:layout_marginBottom="20dp"

                    android:background="@drawable/textboxes"
                    android:ems="10"
                    android:hint="@string/be_marks"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textStyle="bold" />
            <EditText
                    android:layout_marginBottom="20dp"
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:layout_below="@id/marks3"

                    android:includeFontPadding="false"
                    android:background="@drawable/textboxes"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/background_dark"
                    android:textStyle="bold"
                android:lines="3"           />

            <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/description"
                    android:layout_marginBottom="20dp"
                    android:prompt="@string/gender"
                    android:entries="@array/gen"
                   />

        </RelativeLayout>
    </ScrollView>

    <Button
            android:text="@string/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:background="@drawable/signup"
            android:textColor="@android:color/background_light"
            android:onClick="signup"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:text="@string/signup_entry_text"
            android:textColor="@android:color/background_light"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>