<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="167dp" app:srcCompat="@drawable/background"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="EMAIL"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/emaillab"
            android:layout_marginTop="92dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.023" android:textSize="20sp" android:textColor="@color/black"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/salary" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emaillab" app:layout_constraintHorizontal_bias="0.38"
            android:hint="Enter your Email Address" android:background="@drawable/textboxes"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" android:textStyle="bold" android:textSize="18sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passl" android:textSize="20sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/salary"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026" android:text="PASSWORD" android:textColor="@color/black"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.4"
            android:hint="@string/pass_enter" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passl" android:background="@drawable/textboxes"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" android:textStyle="bold" android:textSize="18sp"/>
    <CheckBox
            android:layout_width="142dp"
            android:layout_height="17dp"
            android:id="@+id/checkedTextView" android:text="@string/remember_me"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.023"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pass" android:checkMark="@color/colorPrimary"
            android:textColor="@color/black"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/checkedTextView" app:layout_constraintHorizontal_bias="0.498"
            android:background="@drawable/shape_login_button" android:textColor="@android:color/background_light"
            android:onClick="login"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintBottom_toBottomOf="parent" android:text="@string/signup"
            android:layout_marginBottom="16dp" android:background="@drawable/signup"
            android:textColor="@android:color/background_light"
            android:onClick="signup"/>
    <TextView
            android:text="@string/noaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/signup" android:textColor="@color/black" android:textSize="16sp"/>
    <TextView
            android:layout_width="318dp"
            android:layout_height="44dp"
            android:id="@+id/welcome" android:text="@string/welcome"
            android:textSize="36sp" app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.027" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/loginmessage"
            android:layout_width="162dp"
            android:layout_height="24dp"
            android:id="@+id/loginmessage" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.025" android:textSize="18sp"
            android:textColor="@android:color/white" app:layout_constraintTop_toBottomOf="@+id/welcome"
            android:layout_marginTop="16dp"/>
    <Switch
            android:layout_width="50dp"
            android:layout_height="42dp"
            android:id="@+id/switch1"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/Student" android:layout_marginStart="8dp"
            />
    <TextView
            android:text="@string/student"
            android:layout_width="121dp"
            android:layout_height="40dp"
            android:id="@+id/textView4" android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/switch1"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:layout_width="136dp"
            android:layout_height="45dp"
            android:id="@+id/Student" android:text="@string/teacher"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="64dp"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>